--- a/src/styles/shared_component_styles/Footer.module.scss
+++ b/src/styles/shared_component_styles/Footer.module.scss
@@ -46,10 +46,12 @@
                 color: $white;
                 transition: color 0.2s ease, background-color 0.2s ease, transform 0.2s ease;
 
-                &:hover {
-                    color: $green-main;
-                    background-color: $gray-bright;
-                    transform: translateY(-5px);
+                @media(hover: hover) {
+                    &:hover {
+                        color: $green-main;
+                        background-color: $gray-bright;
+                        transform: translateY(-5px);
+                    }
                 }
             }
         }
@@ -93,8 +95,10 @@
                     color: $white;
                     transition: color 0.2s ease;
 
-                    &:hover {
-                        color: $green-main;
+                    @media(hover: hover) {
+                        &:hover {
+                            color: $green-main;
+                        }
                     }
                 }
             }
